# clouder

./: .gitignore  Makefile  README.md  environment.yml  hatch_build.py  package.json  pyproject.toml  webpack.config.js
.github/workflows/: build.yml
clouder/: __init__.py  application.py  serverapplication.py
clouder/apps/: __init__.py  _base.py  base.py  box.py  config.py  context.py  ctx.py  info.py  k8s.py  keypair.py  keys.py  kubernetes.py  me.py  operator.py  profile.py  projects.py  run.py  s3.py  setup.py  shell.py  ssh_key.py  status.py  up.py  virtual_machine.py  vm.py
clouder/cloud/local/: api.py
clouder/cloud/ovh/: api.py  get_credentials.py
clouder/commands/ovh/: apps.py  authorized_apps.py  consumer_key.py  database_mysql.py  databases_mysql.py  kubernetes.py  project.py  ssh_keys.py
clouder/handlers/: __init__.py  base.py
clouder/handlers/config/: handler.py
clouder/handlers/index/: handler.py
clouder/handlers/ovh/: handler.py  keys.py  projects.py  ssh_keys.py
clouder/kubernetes/crd/: crd.yaml  obj.yaml
clouder/operator/: operations.py  operator.py
clouder/operator/commands/: ssh_key.py  sshkey.py
clouder/operator/crd/: ssh-keys-example.yaml  ssh-keys.yaml  sshkeys-example.yaml  sshkeys.yaml
clouder/operator/daemons/: daemons.py
clouder/operator/handlers/: ssh_key.py  sshkey.py
clouder/operator/timers/: timers.py
clouder/sbin/: about.sh  argo-install.sh  clouder.sh  crd-apply.sh  crd-create.sh  crd-delete.sh  header.sh  helm-build.sh  helm-deploy.sh  helm-help.sh  helm-install.sh  helm-ls.sh  helm-serve.sh  helm-status.sh  k8s-dashboard-secret.sh  k8s-dashboard.sh  k8s-help.sh  k8s-pods-rm.sh  k8s-status.sh  kind-install.sh  kubectl-help.sh  kubectl-install.sh  minikube-addons.sh  minikube-clean.sh  minikube-dashboard.sh  minikube-docker-env.sh  minikube-help.sh  minikube-install.sh  minikube-ip.sh  minikube-restart.sh  minikube-rm-novm.sh  minikube-rm.sh  minikube-ssh.sh  minikube-start-novm.sh  minikube-start.sh  minikube-status.sh  minikube-stop-novm.sh  minikube-stop.sh  ping.sh
clouder/templates/: index.html
clouder/util/: shell.py  utils.py
dev/sh/: kill.sh  start-jupyter-server.sh
docs/: Makefile  README.md  docusaurus.config.js  package.json
docs/docs/: index.mdx
docs/docs/aws/: _category_.yml  index.mdx
docs/docs/ovhcloud/: _category_.yml  index.mdx
docs/docs/usage/: _category_.yml  index.mdx
patches/: @primer-react-brand-npm-0.24.0-067f87abf2.patch
public/: index.html
schema/: plugin.json
src/: Clouder.tsx  ClouderApp.tsx  ClouderDev.tsx  ClouderJupyterLab.tsx  ClouderJupyterLabHeadless.tsx  index.ts
src/jupyterlab/: handler.ts  index.ts  widget.tsx
src/state/: index.ts
src/tabs/: AWSTab.tsx  AboutTab.tsx  ClouderTab.tsx  OVHTab.tsx  OVHcloudTab.tsx
src/tabs/aws/: KeysTab.tsx  SSHKeysTab.tsx  SshKeysTab.tsx
src/tabs/ovh/: KeysTab.tsx  KubernetesTab.tsx  ProjectsTab.tsx  SSHKeysTab.tsx  SshKeysTab.tsx  VirtualMachinesTab.tsx
style/: base.css
