[build-system]
requires = ["hatchling==1.21.1"]
build-backend = "hatchling.build"

[project]
name = "clouder"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "avionix",
    "boto3",
    "datalayer",
    "jupyter-server",
    "kopf",
    "kubernetes",
    "pykube_ng",
    "sshkey-tools",
    "ovh",
    "rich",
    "tabulate",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter",
    "pytest-tornasync",
]

[project.scripts]
c = "clouder.application:main"
clouder = "clouder.application:main"
clouder-server = "clouder.serverapplication:main"

[tool.hatch.version]
path = "clouder/__init__.py"

[tool.hatch.build]
artifacts = [
  "clouder/sbin",
  "clouder/static",
  "clouder/templates"
]

[tool.hatch.build.targets.sdist]
artifacts = ["clouder/labextension"]
exclude = [".github", "binder", ".yarn"]


[tool.hatch.build.hooks.version]
path = "clouder/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
